Fix citation panel and icon bug
Citation panel was underlapping the icon and the scrollbar couldn't be interacted with. I fixed the issue by only rendering the icon when the citation panel is closed. When opened, the image should disappear.

--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -123,6 +123,7 @@
     right: 200px;
     z-index: 0;
     max-width: 100%;
+    pointer-events: none;
     /* border-radius: 30%; */
 }
 
